whoop gap fixed

--- a/css/app.css
+++ b/css/app.css
@@ -1,6 +1,5 @@
 body {
   background-color: #F7F5C2;
-  padding-top: .9%;
   overflow-y: hidden;
 }
 
